replace Guava and Guice usage with stream API and JSR-330 in kb-subscription